# sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
api/ai_service/v26/: ai_service_pb2.py  ai_service_pb2.pyi  ai_service_pb2_grpc.py  ai_service_pb2_grpc.pyi
api/app_hub_service/v26/: app_hub_service_pb2.py  app_hub_service_pb2.pyi  app_hub_service_pb2_grpc.py  app_hub_service_pb2_grpc.pyi
api/auth_service/v26/: auth_service_pb2.py  auth_service_pb2.pyi  auth_service_pb2_grpc.py  auth_service_pb2_grpc.pyi
api/bluetooth_service/v26/: bluetooth_service_pb2.py  bluetooth_service_pb2.pyi  bluetooth_service_pb2_grpc.py  bluetooth_service_pb2_grpc.pyi
api/camera_service/v26/: camera_service_pb2.py  camera_service_pb2.pyi  camera_service_pb2_grpc.py  camera_service_pb2_grpc.pyi
api/cellular_service/v26/: cellular_service_pb2.py  cellular_service_pb2.pyi  cellular_service_pb2_grpc.py  cellular_service_pb2_grpc.pyi
api/common/: types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
client/: __init__.py  ai_manager.py  app_hub_manager.py  auth_manager.py  bluetooth_manager.py  camera_manager.py  cellular_manager.py  client.py  config.py  development_manager.py  ethernet_manager.py  event_manager.py  firewall_manager.py  gpio_manager.py  i2c_manager.py  package_manager.py  power_manager.py  pwm_manager.py  sensor_manager.py  spi_manager.py  system_manager.py  time_manager.py  uart_manager.py  update_manager.py  vpn_manager.py  wifi_manager.py
logger/: __init__.py  logger.py
metadata/: __init__.py  metadata.py
scripts/: build_orb.sh
(+68 files in other folders)
